import java.io.Serializable;

public class NoShuffle implements ShuffleBehaviour, Serializable {

     public PlayingCard[] shuffleDeck(){

         return null;
     }
}
